[project]
name = "langsmith-crash-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "faiss-cpu>=1.12.0",
   "ipykernel>=6.30.1",
   "langchain>=0.3.27",
   "langchain-community>=0.3.29",
   "langchain-google-genai>=2.1.10",
   "langchain-groq>=0.3.7",
   "langchain-tavily>=0.2.11",
   "langgraph>=0.6.4",
   "langgraph-prebuilt>=0.6.4",
   "langsmith>=0.4.25",
   "pydantic>=2.11.7",
   "pypdf>=6.0.0",
   "python-dotenv>=1.1.1",
   "tiktoken>=0.11.0",
]
